  Closure and SplFileInfo using exceptions). (Etienne)
- Fixed bug #46268 (DateTime::modify() does not reset relative time values).
  (Derick)
- Fixed bug #46044 (Mysqli - wrong error message). (Johannes)
- Fixed bug #45991 (Ini files with the UTF-8 BOM are treated as invalid).
  (Scott)
- Fixed bug #45989 (json_decode() doesn't return NULL on certain invalid
  strings). (magicaltux, Scott)
- Fixed bug #45820 (Allow empty keys in ArrayObject). (Etienne)
- Fixed bug #45791 (json_decode() doesn't convert 0e0 to a double). (Scott)

04 Dec 2008, PHP 5.3.0 Alpha 3
- Upgraded bundled PCRE to version 7.8. (Nuno)
- Upgraded bundled sqlite to version 3.6.6.2. (Scott, Ilia)

- Moved ext/msql to PECL. (Derick, Lukas)

- Removed ext/mhash, the BC layer is now entirely within ext/hash. (Scott)

- Changed error level E_ERROR into E_WARNING in Soap extension methods
  parameter validation. (Felipe)
- Changed openssl info to show the shared library version number. (Scott)
- Changed floating point behaviour to consistently use double precision on all
  platforms and with all compilers. (Christian Seiler)
- Changed round() to act more intuitively when rounding to a certain precision
  and round very large and very small exponents correctly. (Christian Seiler)
- Changed fileinfo to no longer send errors to stderr. (Scott)

- Added support for namespaces with brackets. (Greg)
- Added stream_cast() and stream_set_options() to user-space stream wrappers,
  allowing stream_select(), stream_set_blocking(), stream_set_timeout() and 
  stream_set_write_buffer() to work with user-space stream wrappers. (Arnaud)
- Added header_remove() function. (chsc at peytz dot dk, Arnaud)
- Added stream_context_get_params() function. (Arnaud)
- Added optional parameter "new" to sybase_connect(). (Timm)
- Added parse_ini_string() function. (grange at lemonde dot fr, Arnaud) 
- Added str_getcsv() function. (Sara)
- Added openssl_random_pseudo_bytes() function. (Scott)